# Telmac_Emulator_pico

./: CMakeLists.txt  README.md  emulate.c  emulate.h  registers.h  test.c  test_code.h
